--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/wallermadev/PotatoCoin.git"
+    "url": "git+https://github.com/cppdevx/PotatoCoin.git"
   },
   "keywords": [
     "crypto",
