--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
   "author": "Mathew Waller",
   "license": "ISC",
   "dependencies": {
-    "crypto-js": "*"
+    "bs58": "^4.0.1",
+    "crypto-js": "*",
+    "elliptic": "^6.4.0",
+    "js-sha256": "^0.9.0",
+    "ripemd160": "^2.0.2",
+    "secure-random": "^1.1.1"
   },
   "bugs": {
     "url": "https://github.com/wallermadev/jscoin/issues"
