--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "Mathew Waller",
   "license": "ISC",
   "dependencies": {
+    "bip38": "^2.0.2",
     "bs58": "^4.0.1",
     "coinkey": "^3.0.0",
     "crypto-js": "*",
